# monolog

./: LICENSE  README.md  cabal.project  flake.nix  hie.yaml  monolog.cabal  slog.cabal
.github/workflows/: CI.yaml
app/: Main.hs
src/: Api.hs  IO.hs  NoteDb.hs
src/Monolog/: DateTime.hs  File.hs  Html.hs  Note.hs  Parser.hs  Text.hs  Time.hs  Types.hs
test/: Spec.hs
