cabal-version:   2.4
name:            monolog
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2024 Jonas Carpay
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/monolog#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/monolog.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    StrictData

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Api
    IO
    Monolog.DateTime
    Monolog.Parser
    NoteDb

  build-depends:
    , aeson
    , blaze-html
    , bytestring
    , containers
    , directory
    , hashable
    , http-api-data
    , http-types
    , servant
    , servant-blaze
    , servant-server
    , stm
    , text
    , time
    , unordered-containers
    , uuid
    , warp

executable monolog-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  monolog
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite monolog-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , monolog
    , QuickCheck
    , text
    , time

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark monolog-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , monolog

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
